--- a/index.html
+++ b/index.html
@@ -17,8 +17,14 @@
                     <svg class="clockface" width="300" height="300" viewbox="-150 -150 300 300">
                         <circle cx="0 " cy="0" r="145" 
                         fill="transparent" stroke="red" 
-                        stroke-width="5"/> 
+                        stroke-width="5" pathlength="60"
+                        stroke-dasharray=".1 .9" stroke-dashoffset="0.5"/> 
+                        <circle cx="0 " cy="0" r="145" 
+                        fill="transparent" stroke="white" 
+                        stroke-width="10 " pathlength="12"
+                        stroke-dasharray=".1 .9" stroke-dashoffset="1"/> 
                     </svg>
+                    
                 </div>
             </div>
         </div>
