--- a/index.html
+++ b/index.html
@@ -2,33 +2,34 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>World Clock</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>World Clock</title>
+  <link rel="stylesheet" href="style.css">
+  <script src="app.js" type="module"></script>
 </head>
 
 <body>
-    <main>
-        <div class="container">
-            <div class="clock--wrapper">
-                <h2>My Time</h2>
-                <div class="clock">
-                    <svg class="clockface" width="300" height="300" viewbox="-150 -150 300 300">
-                        <circle cx="0 " cy="0" r="145" 
-                        fill="transparent" stroke="red" 
-                        stroke-width="5" pathlength="60"
-                        stroke-dasharray=".1 .9" stroke-dashoffset="0.5"/> 
-                        <circle cx="0 " cy="0" r="145" 
-                        fill="transparent" stroke="white" 
-                        stroke-width="10 " pathlength="12"
-                        stroke-dasharray=".1 .9" stroke-dashoffset="1"/> 
-                    </svg>
-                    
-                </div>
-            </div>
+  <main>
+    <div class="container">
+      <div class="clock--wrapper">
+        <h2>My Time</h2>
+        <div class="clock">
+          <svg class="clockface" width="300" height="300" viewBox="-150 -150 300 300">
+            <circle class="ring ring--seconds" r="145" pathlength="60" />
+            <circle class="ring ring--hours" r="145" pathlength="12" />
+            <text x="50" y="-5" class="date">23</text>
+            <text x="50" y="10" class="am-pm">am</text>
+            <line class="hand hand--minute" x1="0" y1="2" x2="0" y2="-110" />
+            <line class="hand hand--hour" x1="0" y1="2" x2="0" y2="-60" />
+            <circle class="ring ring--center" r="3" />
+            <line class="hand hand--second" x1="0" y1="12" x2="0" y2="-130" />
+          </svg>
         </div>
-    </main>
+      </div>
+    </div>
+  </main>
 </body>
 
 </html>
