--- a/index.html
+++ b/index.html
@@ -14,8 +14,56 @@
   <main>
     <div class="container">
       <div class="clock--wrapper">
-        <h2>My Time</h2>
+        <h2>India</h2>
         <div class="clock" data-locale="Asia/Kolkata">
+          <svg class="clockface" width="300" height="300" viewBox="-150 -150 300 300">
+            <circle class="ring ring--seconds" r="145" pathlength="60" />
+            <circle class="ring ring--hours" r="145" pathlength="12" />
+            <text x="50" y="-5" class="date">23</text>
+            <text x="50" y="10" class="am-pm">am</text>
+
+            <line class="hand hand--minute" x1="0" y1="2" x2="0" y2="-110" />
+            <line class="hand hand--hour" x1="0" y1="2" x2="0" y2="-60" />
+            <circle class="ring ring--center" r="3" />
+            <line class="hand hand--second" x1="0" y1="12" x2="0" y2="-130" />
+          </svg>
+        </div>
+      </div>
+      <div class="clock--wrapper">
+        <h2>Tokyo</h2>
+        <div class="clock" data-locale="Asia/Tokyo">
+          <svg class="clockface" width="300" height="300" viewBox="-150 -150 300 300">
+            <circle class="ring ring--seconds" r="145" pathlength="60" />
+            <circle class="ring ring--hours" r="145" pathlength="12" />
+            <text x="50" y="-5" class="date">23</text>
+            <text x="50" y="10" class="am-pm">am</text>
+
+            <line class="hand hand--minute" x1="0" y1="2" x2="0" y2="-110" />
+            <line class="hand hand--hour" x1="0" y1="2" x2="0" y2="-60" />
+            <circle class="ring ring--center" r="3" />
+            <line class="hand hand--second" x1="0" y1="12" x2="0" y2="-130" />
+          </svg>
+        </div>
+      </div>
+      <div class="clock--wrapper">
+        <h2>London</h2>
+        <div class="clock" data-locale="Europe/Belfast">
+          <svg class="clockface" width="300" height="300" viewBox="-150 -150 300 300">
+            <circle class="ring ring--seconds" r="145" pathlength="60" />
+            <circle class="ring ring--hours" r="145" pathlength="12" />
+            <text x="50" y="-5" class="date">23</text>
+            <text x="50" y="10" class="am-pm">am</text>
+
+            <line class="hand hand--minute" x1="0" y1="2" x2="0" y2="-110" />
+            <line class="hand hand--hour" x1="0" y1="2" x2="0" y2="-60" />
+            <circle class="ring ring--center" r="3" />
+            <line class="hand hand--second" x1="0" y1="12" x2="0" y2="-130" />
+          </svg>
+        </div>
+      </div>
+      <div class="clock--wrapper">
+        <h2>New York</h2>
+        <div class="clock" data-locale="Pacific/Pohnpei">
           <svg class="clockface" width="300" height="300" viewBox="-150 -150 300 300">
             <circle class="ring ring--seconds" r="145" pathlength="60" />
             <circle class="ring ring--hours" r="145" pathlength="12" />
